@@ -17,6 +17,7 @@ Version 0.4d
 * Themed rooms are added to the Shadow Lady. You need to buy a regular whore first (currently only Roa available)
  - Cat Dynasty, chapter one, written by LD and QB
  - More to come...
+* Added some Dreams for Donovan and Asche. Written by The Observer.
 
 --------------------------------------------
              PREVIOUS VERSIONS
